# fifa-world-cup-games-prediction

./: .gitignore  README.md  bat-mlflow_ui.bat  bat-refresh_offline.bat  bat-run_ui.bat  bat-setup.bat  bat-sync.bat  pyproject.toml  requirements.txt  scratch_mlflow_test.py  skills-lock.json
docs/: 00-project-reference.md  01-project-general.md  02-project-data-pipeline.md  03-project-data-pipeline.md  sports-ml-models.md  tech-primer.md
notebooks/: 00-template.ipynb
src/etl/: add_fixture.py  build_match_table.py  custom_fixtures.py  make_dataset.py  paths.py  record_result.py  refresh_tournament.py  team_names.py
src/etl/sources/: fifa_ranking.py  fixtures_2026.py  international_results.py  market_value.py  worldcup_matches.py
src/features/: build_features.py
src/models/: baseline.py  ensemble.py  logistic.py  poisson.py  predict_all.py  predict_fixtures.py  predict_model.py  predict_scores.py  simulate_tournament.py  splits.py  tracking.py  train_model.py  tune.py
src/ui/: app.py
src/visualization/: visualize.py
