[project]
name = "example"
version = "0.1.0"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "lxml>=4.9.0",
    "matplotlib>=3.7.0",
    "mlflow>=2.14",
    "mypy>=1.4.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "optuna>=3.6.0",
    "pandas>=2.0.0",
    "plotly>=5.14.0",
    "pyarrow>=14.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "xlrd>=2.0.1",
]
